force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__Layout__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Layout</label>
    <referenceTo>nDESIGN__Layout__c</referenceTo>
    <relationshipLabel>Section Configurations</relationshipLabel>
    <relationshipName>Section_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>