force-app/main/default/objects/nDESIGN__Section_Configuration__c/fields/nDESIGN__Parent_Configuration__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Parent_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>nDESIGN__Section_Configuration__c.nDESIGN__Screen_Section__c</field>
            <operation>equals</operation>
            <valueField>$Source.nDESIGN__Screen_Section__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>nDESIGN__Section_Configuration__c</referenceTo>
    <relationshipLabel>Child Configurations</relationshipLabel>
    <relationshipName>Child_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>